minor layout bugs fixed

--- a/styles/Block.module.scss
+++ b/styles/Block.module.scss
@@ -2,7 +2,7 @@
 
 .taskBox {
   width: 100%;
-  max-width: 30rem;
+  max-width: 32rem;
   height: max-content;
   border: 1px solid rgba(0, 0, 0, 0.1);
   margin: 0 0.5rem;
