--- a/styles/Hint.module.scss
+++ b/styles/Hint.module.scss
@@ -2,12 +2,10 @@
 .hintPopup {
   position: relative;
   width: 100%;
-  max-width: 11rem;
+  max-width: 15rem;
   height: max-content;
-  margin: 1rem 0;
   border: 1px solid rgba(0, 0, 0, 0.1);
   padding: 0.5rem;
-  margin: 0.5rem;
   text-align: left;
   border-radius: 5px;
   font-weight: 600;
