--- a/styles/Home.module.scss
+++ b/styles/Home.module.scss
@@ -1,8 +1,8 @@
+@import "config";
 .centeredContainer {
   position: absolute;
   width: 90%;
   height: 80%;
-  /* background-color: rgb(40, 16, 40); */
   background-color: #fff;
   top: 10%;
   left: 5%;
@@ -24,8 +24,8 @@
       }
 
       .subheader {
-        color: var(--drop-background);
-        font-size: var(--subtitle-font-size);
+        color: $subheader-color;
+        font-size: $subheader-font-size;
 
         margin: 1rem 0;
         padding: 0.1rem;
