--- a/styles/Project.module.scss
+++ b/styles/Project.module.scss
@@ -2,7 +2,7 @@
 
 .projectBox {
   width: 100%;
-  max-width: 11rem;
+  max-width: 15rem;
   height: 3.5rem;
   border-radius: 5px;
   display: flex;
