--- a/styles/QuickTask.module.scss
+++ b/styles/QuickTask.module.scss
@@ -1,6 +1,5 @@
 .quickTasksBox {
-  padding: 0.5rem;
-  margin: 0.5rem;
+  //   padding: 0.5rem;
   width: 100%;
   min-width: 7rem;
   max-width: 20rem;
@@ -16,7 +15,6 @@
       top: 0;
       left: 25px;
       right: 0;
-      border: 1px solid red;
       font-family: "PT Serif", serif;
       border: none;
       outline: 0;
