--- a/styles/Task.module.scss
+++ b/styles/Task.module.scss
@@ -26,7 +26,7 @@
   }
 
   .textContainer {
-    max-width: 18rem;
+    max-width: 22rem;
     padding-left: 0.5rem;
     font-size: 1rem;
 
