--- a/styles/config.scss
+++ b/styles/config.scss
@@ -23,9 +23,11 @@ $project-pastel-purple: rgba(224, 213, 255, 255);
 $project-pastel-blue: rgba(204, 229, 255, 255);
 $project-pastel-turquise: rgba(208, 244, 252, 255);
 $drop-background: #d2d5df;
+
+$subheader-color: rgba(0, 0, 0, 0.4);
 // 	size
 $navbar-height: 3rem;
 // 	fonts
-$subtitle-font-size: 0.7rem;
+$subheader-font-size: 0.9rem;
 $hint-font-size: 0.8rem;
 $project-name-font-size: 0.9rem;
